--- a/personagens/Jon/styleJon.css
+++ b/personagens/Jon/styleJon.css
@@ -69,7 +69,28 @@ a{
 .jon_button:hover{
     font-size: 35px;
 }
-
+/*PAGINA VITORIA*/
+.jonvitoria_body{
+    background-image: url("./vitoriaJon.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center ;
+    width: 100%;
+    height: 100vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+.vitoria{
+    background: white;
+    border-radius: 10px;
+    opacity: 0.7;
+    font-size: 20px;
+    text-align: center;
+    width: 50%;
+    font-weight: bold;
+    text-transform: uppercase;
 /*PAGINA GAME OVER JON  */
 .gameroverjon_body{
     background-image: url("./gameOverJon.jpg");
