--- a/personagens/Jon/styleJon.css
+++ b/personagens/Jon/styleJon.css
@@ -91,6 +91,7 @@ a{
     width: 50%;
     font-weight: bold;
     text-transform: uppercase;
+}
 /*PAGINA GAME OVER JON  */
 .gameroverjon_body{
     background-image: url("./gameOverJon.jpg");
