--- a/personagens/dwayne/styleDwayne.css
+++ b/personagens/dwayne/styleDwayne.css
@@ -92,7 +92,7 @@ a{
     font-weight: bold;
     text-transform: uppercase;
 }
-/*PAGINA GAME OVER JON  */
+/*PAGINA GAME OVER DWAYNE  */
 .gameroverdwayne_body{
     background-image: url("./imagensDwayne/gameOverDwayne.jpg");
     background-repeat: no-repeat;
