--- a/personagens/personagens.css
+++ b/personagens/personagens.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-background-image: url(fundo.jpg.jpg);
+background-image: url(fundoselecaopersonagem.jpg);
 background-repeat: no-repeat;
 background-size: 100%;
 }
